# langchain-azure-customer-support-agent

./: .env.example  .gitignore  Dockerfile  README.md  azure.yaml  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  data_loader.py  main.py  state.py  streaming.py
app/middleware/: __init__.py  refine.py  steps.py  validate.py
app/prompts/: order_lookup.txt  product_qna.txt  resolution.txt  returns.txt  tech_support.txt  triage.txt
app/static/: index.html
app/tools/: __init__.py  catalog.py  kb.py  orders.py  tickets.py  workflow.py
data/: customers.json  generate_sample_data.py  kb_articles.json  orders.json  products.json  warranty_terms.json
docs/: architecture.md
docs/slides/: layer-1-middlewares.md  layer-2-handoffs.md
infra/: abbreviations.json  main.bicep  main.parameters.json  resources.bicep
infra/hooks/: postprovision.sh
tests/: test_data_loader.py  test_streaming.py  test_tools.py
