[project]
name = "langchain-azure-customer-support-agent"
version = "0.1.0"
description = "Fin-style customer support agent on Azure OpenAI Responses API + LangChain v1 handoffs."
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "azure-identity>=1.19.0",
    "openai>=1.55.0",
    "starlette>=0.41.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "numpy>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
